@@ -1,6 +1,7 @@
 Revision history for Dancer-Plugin-Catmandu-SRU
 
 {{$NEXT}}
+  - new template_options setting
 
 0.0403  2016-05-26 15:07:17 CEST
   - more pod and a demo application
